# ultra

./: .clang-format-disabled  .clang-format-google  .clang-format-optional  .clang-format-todo  .clang-tidy-todo  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ChangeLog.txt  Contributing.md  EnTT.lua  License  Prepare.bat  README.md  ReadMe.md  Security.md  Securitymd  Solution.lua  VSWorkspaceSettings.json  assimp.lua  sonar-project.properties  vcpkg.json  yaml-cpp.vcxproj
.github/workflows/: codeql.yml  devskim.yml  msbuild.yml  msvc.yml
Assets/Images/: Omnia.xcf  Ultra.xcf
Assets/Shaders/: Basic.frag  Basic.frag.spv  Basic.glsl  Basic.vert  Basic.vert.spv  Circle.glsl  Color.glsl  Compile.bat  Cubemap.glsl  (+23 more)
Data/: Config.yml  Omnia.ini  Scene.yaml  Scene.yml  Spectra.ini  Ultra-Demo.ini  Ultra-Test.ini  Ultra.ini
Manual/: Concept.md  Concept.mmd  Style.md
Scripts/: CompileShaders.bat  CompileShaders.ps1  Prepare.ps1  Update.bat  Update.ps1
Source/: CMakeLists.txt  Projects.lua  Settings.h  Settings.h.in  Solution.h.in  Style.md  Test.h  Ultra.h.in
Source/App/: App.cpp  App.lua  CMakeLists.txt  CMakeSources.cmake  Layers.cpp  Test.cpp
Source/Demo/: CMakeLists.txt  CMakeSources.cmake  Demo.cpp  Game2D.cpp  Layers.cpp
Source/Designer/: CMakeLists.txt  CMakeSources.cmake  CoreLayer.cpp  Designer.cpp  Layer.cpp  Module.ixx  Spectra.cpp  resource.h
Source/Designer/Menu/: Edit.h  File.h  Help.h  Menues.h  Tools.h  View.h
Source/Designer/Spectra/: Designer.cpp  Designer.h
Source/Designer/Spectra/Component/: Menu.h
Source/Designer/Spectra/Menu/: Edit.h  File.h  Menues.h  View.h
Source/Designer/Spectra/Panel/: Browser.cpp  Browser.h  Console.h  Panels.h  Properties.cpp  Properties.h  StyleEditor.h  Viewport.cpp  Viewport.h
Source/Designer/Style/: MaterialDesign.h  StyleEditor.h  Styles.h
Source/Designer/Test/: TextEditor.cpp  TextEditor.h
Source/Designer/View/: Console.h  Viewport.h  Views.h
Source/Engine/: CMakeLists.txt  CMakeSources.cmake  Engine.h  Test.h  Ultra.pch
Source/Engine/Platform/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLRendererAPI.cpp  GLRendererAPI.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h
Source/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Source/Engine/Ultra/: Core.h  Engine.h
Source/Engine/Ultra/Audio/: Audio.cpp  Audio.h
Source/Engine/Ultra/Math/: Math.cpp  Math.h
Source/Engine/Ultra/Module/: CameraController.h  ParticleSystem.cpp  ParticleSystem.h
Source/Engine/Ultra/Platform/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLContext.h  GLFramebuffer.cpp  GLFramebuffer.h  GLPipeline.cpp  GLPipeline.h  GLRenderPass.cpp  GLRenderPass.h  GLRendererAPI.cpp  GLRendererAPI.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h
Source/Engine/Ultra/Platform/Vulkan/: VKBuffer.cpp  VKBuffer.h  VKContext.h  VKFramebuffer.cpp  VKFramebuffer.h  VKPipeline.cpp  VKPipeline.h  VKRenderPass.cpp  VKRenderPass.h  VKRendererAPI.cpp  VKRendererAPI.h  VKShader.cpp  VKShader.h  VKTest.cpp  VKTest.h  VKTexture.cpp  VKTexture.h
Source/Engine/Ultra/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DesignerCamera.cpp  DesignerCamera.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererData.h  Shader.cpp  Shader.h  ShaderUniform.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Source/Engine/Ultra/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  Serializer.cpp  Serializer.h
Source/Engine/Ultra/Script/: CameraController.h
Source/Engine/Ultra/Utility/: ShaderCompiler.cpp  ShaderCompiler.h
Source/Game/: Game.cpp  Game.lua
Source/Modules/: Modules.ixx  Modules.lua
Source/Modules/Phoenix/: Phoenix.ixx
Source/Spectra/: CMakeSources.cmake  Designer.cpp  Designer.ixx  Layer.cpp  MainLayer.cpp  ProfilerResults.json  Spectra.aps  Spectra.cpp  Spectra.lua  resource.h
Source/Spectra/Components/: Menu.ixx
Source/Spectra/Menu/: File.h  Help.h  Tools.h  View.h
Source/Spectra/Panels/: Browser.ixx  CodeEditor.ixx  Console.ixx  Properties.ixx  Viewport.ixx
Source/Spectra/Style/: MaterialDesign.h  Styles.h
Source/Spectra/View/: Browser.cpp  Browser.h  Console.h  Scene.h  Views.h
Source/Test/: CMakeLists.txt  CMakeSources.cmake  Test.cpp  Test.lua
Source/Test/Test/: TestCore.ixx  TestEngine.ixx  TestEngine.txt  TestResearch.ixx
Source/Ultra/: CMakeLists.txt  CMakeSources.cmake  Core.h  EntryPoint.h  Ultra.pch
Source/Ultra/Engine/: Engine.h
Source/Ultra/Engine/Audio/: Audio.cpp  Audio.h
Source/Ultra/Engine/Modules/: CameraController.cpp  CameraController.h  ParticleSystem.cpp  ParticleSystem.h
Source/Ultra/Engine/Platform/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLFramebuffer.cpp  GLFramebuffer.h  GLRendererAPI.cpp  GLRendererAPI.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h
Source/Ultra/Engine/Prototype/: Camera.h  Mesh.h  Model.h  Renderer3D.h  Scene.h
Source/Ultra/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Model.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererData.h  Shader.cpp  Shader.h  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Source/Ultra/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  System.h
Source/Ultra/Scripts/: CameraController.h
User/: Ultra.vstheme
Utilities/: Modules.cmake
backends/: imgui_impl_win32-patch.cpp
patches/: DearImGui #3321 NahimicOSD.url
(+38 files in other folders)
